--- a/src/main/resources/templates/animaldetails.html
+++ b/src/main/resources/templates/animaldetails.html
@@ -1,38 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>About page</title>
   <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+  <title>Let's Party!</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header">header</div>
-<div class="border"><a th:href="@{|/animaldetails.html/${animal.id}/prev|}" href="#" class="nextprev">&lt;</a></div>
-<div th:if="${animal}" class="container"><h1 th:text="${animal.name}">animaldetails</h1>
-  <div th:if="${animal}" class="linkercontainer">
-      <p>city:</p>
-      <p>bio:</p>
+<div th:replace="fragments/header :: header">Header</div>
+
+
+<div class="row1">
+  <div class="row1content" th:if="${animal}">
+
+    <div class="prevButtonDiv">
+      <a class="buttonLook smallButton" th:href="@{|/animaldetails/${prevId}|}">&lt;</a>
+    </div>
+    <div class="nextButtonDiv">
+      <a class="buttonLook smallButton" th:href="@{|/animaldetails/${nextId}|}">&gt;</a>
     </div>
 
-  <div th:if="${animal}" class="rechtercontainer">
-      <p th:text="${animal.city}">city</p>
-      <p th:text="${animal.bio}">bio</p>
+    <h2 th:text="|party animal: ${animal.name}|">animaldetails</h2>
 
+    <div class="venueinfo">
+      <div class="infoLine">
+        <div class="infoLineName">city</div>
+        <div class="infoLineValue" th:text="${animal.city}">city</div>
+      </div>
     </div>
-    <div th:if="${animal}" class="border"><a th:href="@{|/animaldetails/${animal.id}/next|}" href="#" class="nextprev">&gt;</a>
+    <div class="venueinfo">
+      <div class="infoLine">
+        <div class="infoLineName">bio</div>
+        <div class="infoLineValue" th:text="${animal.bio}">bio</div>
+      </div>
+    </div>
+
+  </div>
+  <div class="row1content" th:unless="${animal}">
+    <p>no animal was chosen</p>
+  </div>
+</div>
+
+<div class="row1">
+  <div class="row1content" th:if="${animal}">
+    <h2>going to </h2>
+
+    <div class="venuelist">
+      <div th:each="party:${animal.parties}">
+        <a class="buttonLook mediumButton" th:href="@{|/partydetails/${party.id}|}">
+          <span th:text="${party.name}">venue name </span>
+        </a>
+      </div>
     </div>
   </div>
-  <div class="container">
-    <div class="containerbelow">
-      <h1 class="container">line up:</h1>
-      <ul class="buttonlist">
-        <li th:each="party:${animal.parties}">
-          <a class="container" th:href="@{|/partydetails/${party.id}|}">
-            <span th:text="${party.name}">venue name </span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+</div>
 </body>
 </html>
