--- a/src/main/resources/templates/artistlist.html
+++ b/src/main/resources/templates/artistlist.html
@@ -7,21 +7,36 @@
 </head>
 <body>
 <div th:replace="fragments/header :: header">header</div>
-<div class="container">
-    <h1>Artist list</h1>
-    <div th:if="${showFilters}"><h1>Hier komen de filters!! </h1>
-        <form>
-            <div><input type="submit" value="search"></div>
-            <h3>Artist Name</h3>
-            <div><label for="artistName" l>Artist name</label> <input type="text" id="artistName" name="artistName"
-                                                                      value=""></input></div>
-        </form>
+<div class="row1">
+    <div class="row1content">
+        <h2>artists</h2>
+        <div class="cols2">
+            <div th:text="|${nrOfArtists} artists found|">10 artists</div>
+            <div th:unless="${showFilters}" class="filters">
+                <a class="buttonLook filterButton" th:href="@{/artistlist/filter}">filter</a>
+            </div>
+            <div th:if="${showFilters}" class="filters">
+                <a class="buttonLook filterButton" th:href="@{/artistlist}">-</a>
+                <form>
+                    <div class="onefilter">
+                        <input type="submit" value="search" class="buttonLook filterButton">
+                    </div>
+                    <h3>keyword</h3>
+                    <div class="onefilter">
+                        <label for="keyword" class="filtername"></label>
+                        <input type="text" id="keyword" name="keyword" th:value="${keyword}" value="0">
+                    </div>
+                </form>
+            </div>
+            <div class="venuelist">
+                <div th:each="artist:${artists}">
+                    <a class="buttonLook mediumButton"
+                       th:href="@{|/artistdetails/${artist.id}|}"
+                       th:text="${artist.artistName}">artist name</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <a class="buttonlook" th:unless="${showFilters}" href="/artistlist/filter">Filter</a>
-    <ul class="buttonlist">
-        <li th:each="artist, iStat:${artists}"><a th:href="@{|/artistdetailsbyid/*{iStat.index +1}|}"
-                                                  th:text="|${artist.getArtistName()}|" href="">artist name</a></li>
-    </ul>
 </div>
 </body>
 </html>
