--- a/src/main/resources/templates/partydetails.html
+++ b/src/main/resources/templates/partydetails.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>About page</title>
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <title>Let's Party!</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header">header</div>
+<div th:replace="fragments/header :: header">Header</div>
+
 
 <div class="row1">
     <div class="row1content" th:if="${party}" th:object="${party}">
@@ -70,7 +71,7 @@
 
         <div class="venuelist">
             <div th:each="artist:${party.artists}">
-                <a class="buttonLook mediumButton"  th:href="@{|/artistdetailsbyid/${artist.id}|}">
+                <a class="buttonLook mediumButton" th:href="@{|/artistdetails/${artist.id}|}">
                     <span th:text="${artist.artistName}">artist name </span>
                 </a>
             </div>
@@ -90,5 +91,6 @@
         </div>
     </div>
 </div>
+
 </body>
 </html>
