--- a/src/main/resources/templates/partylist.html
+++ b/src/main/resources/templates/partylist.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>About page</title>
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../static/css/style.css"/>
+    <title>Let's Party!</title>
 </head>
 <body>
-<div th:replace="fragments/header :: header">header</div>
+<div th:replace="fragments/header :: header">Header</div>
+
 
 <div class="row1">
     <div class="row1content">
@@ -27,6 +28,5 @@
         </div>
     </div>
 </div>
-
 </body>
 </html>
