--- a/src/main/resources/templates/venuelist.html
+++ b/src/main/resources/templates/venuelist.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Venue list</title>
@@ -8,84 +8,96 @@
 <body>
 <div th:replace="fragments/header :: header">header</div>
 
-<div class="container">
-    <h1>Venues</h1>
-    <h1 th:text="|${aantal} venues found|"> No venues found </h1>
-    <a h1 class="buttonlook" th:if="${showFilters}" th:href="@{/venuelist}">-</a>
-    <form></form>
-    <div th:if="${showFilters}"><h1>Hier komen de filters!! </h1>
-        <form>
-            <div>
-                <input type="submit" value="search">
+<div class="row1">
+    <div class="row1content">
+        <h2>venues</h2>
+        <div class="cols2">
+            <div th:text="|${nrOfVenues} venues found|">10 venues</div>
+            <div th:unless="${showFilters}" class="filters">
+                <a class="buttonLook filterButton" th:href="@{/venuelist/filter}">filter</a>
             </div>
-            <h3>capacity</h3>
-            <div>
-                <label for="minCapacity" >min</label>
-                <input type="number" id="minCapacity" name="minCapacity" th:value="${minCapacity}" value="0" step="50">persons</input>
-            </div>
-            <div>
-                <label for="maxCapacity" >max</label>
-                <input type="number" id="maxCapacity" name="maxCapacity" th:value="${maxCapacity}" value="0" step="50">persons</input>
-            </div>
-            <h3>Distance from public transport</h3>
-            <div>
-                <label for="maxDistance" >max</label>
-                <input type="number" id="maxDistance" name="maxDistance" value="1" th:value="${maxDistance} ? ${maxDistance} : ''" step="1"> km
-            </div>
-            <div>
-                <h3>Food</h3>
-                <div>
-                    <label for="foodProvided" >yes</label>
-                    <input type="radio" id="foodProvided" name="foodProvided" value="true" th:checked="${foodProvided=='true'}"></input>
-                </div>
-                <div>
-                    <label for="foodProvided1" >no</label>
-                    <input type="radio" id="foodProvided1" name="foodProvided" value="false" th:checked="${foodProvided=='false'}"></input>
-                </div>
-                <div>
-                    <label for="foodProvided2" >all</label>
-                    <input type="radio" id="foodProvided2" name="foodProvided" value="false && true" th:checked="${foodProvided=='false' && 'true'}"> </input>
-                </div>
-            </div>
-            <div>
-                <h3>Indoor</h3>
-                <div>
-                    <label for="indoor" >yes</label>
-                    <input type="radio" id="indoor" name="indoor" value="true" th:checked="${indoor=='true'}"></input>
-                </div>
-                <div>
-                    <label for="indoor" >no</label>
-                    <input type="radio" id="indoor1" name="indoor" value="false" th:checked="${indoor=='false'}"></input>
-                </div>
-                <div>
-                    <label for="indoor" >all</label>
-                    <input type="radio" id="indoor2" name="indoor" value="false && true" th:checked="${indoor=='false' && 'true'}"></input>
-                </div>
-                <div>
-                    <h3>Outdoor</h3>
-                    <div>
-                        <label for="outdoor" >yes</label>
-                        <input type="radio" id="outdoor" name="outdoor" value="true" th:checked="${outdoor=='true'}"></input>
+            <div th:if="${showFilters}" class="filters">
+                <a class="buttonLook filterButton" th:href="@{/venuelist}">-</a>
+                <form>
+                    <div class="onefilter">
+                        <input type="submit" value="search" class="buttonLook filterButton">
                     </div>
-                    <div>
-                        <label for="foodProvided1" >no</label>
-                        <input type="radio" id="outdoor1" name="outdoor" value="false" th:checked="${outdoor=='false'}"></input>
+                    <h3>capacity</h3>
+                    <div class="onefilter">
+                        <label for="minCapacity" class="filtername">min</label>
+                        <input type="number" id="minCapacity" name="minCapacity" th:value="${minCapacity}" value="0" step="50"> persons
                     </div>
-                    <div>
-                        <label for="outdoor" >all</label>
-                        <input type="radio" id="outdoor2" name="outdoor" value="false && true" th:checked="${outdoor=='false' && 'true'}"></input>
+                    <div class="onefilter">
+                        <label for="maxCapacity" class="filtername">max</label>
+                        <input type="number" id="maxCapacity" name="maxCapacity" th:value="${maxCapacity}" value="5000" step="50"> persons
                     </div>
+                    <h3>distance from public transport</h3>
+                    <div class="onefilter">
+                        <label for="maxDistance" class="filtername">max</label>
+                        <input type="number" id="maxDistance" name="maxDistance" value="1"
+                               th:value="${maxDistance} ? ${maxDistance} : ''" step="1"> km
+                    </div>
+                    <h3>food</h3>
+                    <div class="onefilter">
+                        <label for="food_yes" class="filtername">yes</label>
+                        <input type="radio" id="food_yes" name="filterFood" value="yes"
+                               th:checked="${filterFood=='yes'}">
+                    </div>
+                    <div class="onefilter">
+                        <label for="food_no" class="filtername">no</label>
+                        <input type="radio" id="food_no" name="filterFood" value="no" th:checked="${filterFood=='no'}">
+                    </div>
+                    <div class="onefilter">
+                        <label for="food_all" class="filtername">all</label>
+                        <input type="radio" id="food_all" name="filterFood" value="all"
+                               th:checked="${filterFood=='all'}">
+                    </div>
+                    <h3>indoor</h3>
+                    <div class="onefilter">
+                        <label for="indoor_yes" class="filtername">yes</label>
+                        <input type="radio" id="indoor_yes" name="filterIndoor" value="yes"
+                               th:checked="${filterIndoor=='yes'}">
+                    </div>
+                    <div class="onefilter">
+                        <label for="indoor_no" class="filtername">no</label>
+                        <input type="radio" id="indoor_no" name="filterIndoor" value="no"
+                               th:checked="${filterIndoor=='no'}">
+                    </div>
+                    <div class="onefilter">
+                        <label for="indoor_all" class="filtername">all</label>
+                        <input type="radio" id="indoor_all" name="filterIndoor" value="all"
+                               th:checked="${filterIndoor=='all'}">
+                    </div>
+                    <h3>outdoor</h3>
+                    <div class="onefilter">
+                        <label for="outdoor_yes" class="filtername">yes</label>
+                        <input type="radio" id="outdoor_yes" name="filterOutdoor" value="yes"
+                               th:checked="${filterOutdoor=='yes'}">
+                    </div>
+                    <div class="onefilter">
+                        <label for="outdoor_no" class="filtername">no</label>
+                        <input type="radio" id="outdoor_no" name="filterOutdoor" value="no"
+                               th:checked="${filterOutdoor=='no'}">
+                    </div>
+                    <div class="onefilter">
+                        <label for="outdoor_all" class="filtername">all</label>
+                        <input type="radio" id="outdoor_all" name="filterOutdoor" value="all"
+                               th:checked="${filterOutdoor=='all'}">
+                    </div>
+                </form>
+            </div>
+            <div class="venuelist">
+                <div th:each="venue:${venues}">
+                    <a class="buttonLook mediumButton"
+                       th:href="@{|/venuedetails/${venue.id}|}">
+                        <span th:text="${venue.venueName}">venue name </span>
+                        <div th:text="|capacity ${venue.capacity}|" class="venueExtraInfo">maxNrOfPersons</div>
+                    </a>
+
                 </div>
             </div>
-        </form>
+        </div>
     </div>
-    <a class="buttonlook" th:unless="${showFilters}" href="/venuelist/filter">Filter</a>
-    <ul class="buttonlist">
-        <li th:each="venue, iStat:${venues}"><a th:href="@{|/venuedetails/*{venue.getId()}|}" href=""><span
-                th:text="|${venue.getVenueName()}|">venue name</span><br><span class="buttonlistunderscript"
-                                                                               th:text="|Capacity ${venue.getCapacity}|"></span></a>
-    </ul>
-    </ul>
 </div>
 
 </body>
