PROJECT AFGEROND - HET NODIGE GEHAALD UIT GITHUB REPOSITORY VERA...
Homepage verfijnd! + "/" toegevoegd om te linken naar de homepage!

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -8,9 +8,11 @@
 <body>
     <div th:replace="fragments/header :: header">header</div>
 
-    <div class="container">
-        <h1>About</h1>
-        <p>Welcome to the About Page.</p>
+    <div class="row1">
+        <div class="row1content">
+            <h2>About me</h2>
+            I like to Party! Contact me.
+        </div>
     </div>
 </body>
 </html>
